feat: enhance BoxGeometry with improved Html positioning and add fixed scale to PivotControls

--- a/my-app-1/src/app/globals.css
+++ b/my-app-1/src/app/globals.css
@@ -12,3 +12,16 @@ html, body {
   overflow: hidden;
   background-color: lightskyblue
 }
+
+.geometry-label > div
+{
+    font-family: Helvetica, Arial;
+    position: absolute;
+    background: #00000088;
+    color: white;
+    padding: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    border-radius: 30px;
+    user-select: none;
+}
